# matrix

./: CMakeLists.txt
include/: main.hpp  matrix.h  matrix.hpp  row.h  row.hpp
src/: main.cpp  matrix.cpp  row.cpp
test/: matrix_class_test.cpp  row_class_test.cpp  row_test.cpp
